--- a/index.html
+++ b/index.html
@@ -37,12 +37,15 @@
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
-                <div class="col-12 col-sm-6">
+                <div class="col-12 col-sm-5">
                     <h1>Ristorante con Fusion</h1>
                     <p class="d-none d-sm-block">We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
+                <div class="col-12 col-sm-3 align-self-center">
                     <img src="img/logo.png" class="img-fluid">
+                </div>
+                <div class="col-12 col-sm-3 align-self-center">
+                    <a class="btn btn-warning btn-block" href="#reservetable" role="button">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -68,14 +71,20 @@
             </div>
         </div>
 
-
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 col-md-3">
                 <h3>This Month's Promotions</h3>
             </div>
-            <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+            <div class="col col-sm order-sm-last col-md">
+                <div class="media">
+                    <div class="media-body">
+                    <h2 class="mt-0">Weekend Grand Buffet
+                        <span class="badge badge-danger">NEW</span>
+                    </h2>
+                    <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                    </div>
+                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/buffet.png" alt="Buffet">
+                </div>
             </div>
         </div>
 
@@ -92,6 +101,69 @@
                         <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences.</p>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="row row-content align-items-center">
+    <div class="col-12 col-sm-8 offset-sm-2">
+        <div class="card">
+            <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+            <div class="card-body">
+                <form id="reservetable">
+                <div class="form-group row">
+                <dl class="row">
+                    <dd class="col-4">Number of guests</dt>
+                    <dd class="col-8">
+                        <div class="form-check-inline">
+                            <label class="form-check-label">
+                              <input type="radio" class="form-check-input" name="optradio">1
+                            </label>
+                        </div>
+                        <div class="form-check-inline">
+                            <label class="form-check-label">
+                              <input type="radio" class="form-check-input" name="optradio">2
+                            </label>
+                        </div>
+                        <div class="form-check-inline">
+                            <label class="form-check-label">
+                              <input type="radio" class="form-check-input" name="optradio">3
+                            </label>
+                        </div>
+                        <div class="form-check-inline">
+                            <label class="form-check-label">
+                                <input type="radio" class="form-check-input" name="optradio">4
+                              </label>
+                        </div>
+                        <div class="form-check-inline">
+                              <label class="form-check-label">
+                                <input type="radio" class="form-check-input" name="optradio">5
+                              </label>
+                        </div>
+                        <div class="form-check-inline">
+                              <label class="form-check-label">
+                                <input type="radio" class="form-check-input" name="optradio">6
+                              </label>
+                        </div>  
+                    </dd>
+                    <dd class="col-4">Date and Time</dd>
+                    <dd class="col-8>">
+                        <div class="form-group row">
+                            <div class="col-md-4">
+                                <input type="date" class="form-control" id="firstname" name="firstname" placeholder="Date">
+                            </div>
+                            <div class="col-md-4">
+                                <input type="time" class="form-control" id="firstname" name="firstname" placeholder="Time">
+                            </div>
+                    </dd>
+                </dl>
+                </div>
+                <div class="form-group row">
+                <div class="offset-md-4 col-md-10">
+                    <button type="submit" class="btn btn-primary">Reserve</button>
+                </div>
+                </div>
+                </form>
+            </div>
             </div>
         </div>
     </div>
